# jtc-excel-md-converter

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  NOTICE.md  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  public-release-gate.yml
docs/: 2026-06-15-demo-app-requirements.md  2026-06-15-kepco-demo-app-implementation-plan.md  2026-06-15-oss-byok-ai-roadmap.md  CODEX_HANDOFF.md  before-after-sample.md  poc-package.md  public-release-approval.md  public-release-checklist.md  public-release-readiness.md  public-sample-corpus.md
docs/design/: kepco-demo-app-mockup.html
examples/: jtc_screen_design.xlsx  make_sample.py
scripts/: check_github_actions_versions.py  create_zundamon_demo_video.py  docker_smoke.sh  evaluate_private_corpus.py  fetch_public_sample_corpus.py  public_release_gate.py  smoke_demo_ui.py
src/jtc_excel_md/: __init__.py  ai_config.py  ai_providers.py  ai_restructure.py  cli.py  converter.py  demo_server.py  pdf_converter.py  rich_media.py  word_converter.py
src/jtc_excel_md_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_ai_config.py  test_ai_providers.py  test_cli_ai_options.py  test_customer_facing_copy.py  test_demo_server.py  test_docker_packaging.py  test_documentation_language.py  test_jtc_excel_converter.py  test_next_phase_contracts.py  test_public_sample_corpus.py  test_release_readiness.py  test_word_converter.py
