[project]
name = "jtc-excel-md-converter"
version = "0.1.0"
description = "JTC-style Excel design document to Markdown/JSON converter prototype"
requires-python = ">=3.10"
dependencies = ["openpyxl>=3.1.0"]

[project.scripts]
jtc-md-convert = "jtc_excel_md.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
